manifests/httpd_and_exporter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: apache2
        image: ttedesch/httpd:latest
        ports:
        - containerPort: 80
      - name: apache-exporter
        image: bitnami/apache-exporter
        ports:
        - containerPort: 9117
        args: ["--scrape_uri=http://127.0.0.1/server-status/?auto"]
