manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "test-cluster-lciavsdzsham-node-0.cern.ch"
    http:
      paths:
      - path: /http
        backend:
          serviceName: httpgo
          servicePort: 8888
